--- a/localisation/english/op_start_system_l_english.yml
+++ b/localisation/english/op_start_system_l_english.yml
@@ -7,6 +7,8 @@ NAME_OP_Homeworld:0 "New Eden"
 NAME_OP_Moon:0 "Lunar Bastion"
 NAME_OP_Inner_Planet:0 "Energy Prime"
 NAME_OP_Asteroid_Belt:0 "Gilded Veil"
+NAME_OP_Rich_Asteroid:0 "Miner's Fortune"
+NAME_OP_Crystal_Asteroid:0 "Crystal Cache"
 NAME_OP_Outer_Planet:0 "Minerals Core"
 NAME_OP_Gas_Giant:0 "Bounty Sphere"
 NAME_OP_Gas_Moon:0 "Mote Foundry"
@@ -20,6 +22,9 @@ NAME_OP_Energy_Prime:0 "Energy Prime"
 NAME_OP_Minerals_Core:0 "Minerals Core"
 NAME_OP_Farming_Haven:0 "Farming Haven"
 NAME_OP_Paradise_World:0 "Paradise World"
+NAME_OP_Molten_Forge:0 "Molten Forge"
+NAME_OP_Gas_Harvester:0 "Gas Harvester"
+NAME_OP_Barren_Rock:0 "Barren Rock"
 
 # Game Rules
 game_rule_op_system_start:0 "OP Start System"
